<resources>
    <!--<string name="app_name">Navego 360 Credito</string>-->
    <string name="app_name">DM Smart</string>

    <!-- SPLASH -->
    <string name="invalid_open_app">Debe abrir la aplicación desde Navego360</string>
    <string name="invalid_user_info_updated">Para poder ver las ofertas deberá actualizar los datos del docente</string>
    <string name="close_dialog_btn">Entendido</string>

    <!-- TIPOS DE OFERTAS -->
    <string name="offer_expired_date_label">Ofertas válidas hasta</string>
    <string name="no_offers_all">No se cuenta con ninguna oferta disponible.</string>
    <string name="successfully_saved_offer_message">Se han guardado los cambios.</string>
    <string name="loading_offes_error">Hubo un problema al cargar las ofertas.</string>
    <string name="expire_offers_error">Las ofertas han expirado.</string>
    
    <string name="creditos_label">Créditos</string>
    <string name="plaza_label">Plaza</string>
    <string name="hoteles_label">Hoteles</string>
    <string name="vivienda_label">Vivienda</string>
    <string name="credit_type_label">Tipo de crédito:</string>
    <string name="amount_label">Monto aprobado:</string>
    <string name="quota_label">Cuota máxima total:</string>
    <string name="credit_date_label">Plazo crédito:</string>
    <string name="tcea_label">TCEA:</string>
    <string name="rate_label">Tasa de interés:</string>
    <string name="flat_label">Gasto Flat:</string>
    <string name="disgrace_label">Desgravamen:</string>

    <string name="send_print">Imprimir</string>
    <string name="send_email">Enviar correo</string>

    <!-- OFERTAS -->
    <string name="offers_action_bar">Cálculo de crédito</string>
    <string name="offer_credited">Crédito otorgado - solo lectura</string>
    <string name="teacher_label">Docente</string>
    <string name="alert_message">Variaron Datos de la Boleta</string>
    <string name="max_offer_amount">Monto aprobado</string>
    <string name="credit_type_label_2">Tipo de crédito</string>
    <string name="approved_date_label">Fecha de aprobación : </string>
    <string name="tea_label">TEA:</string>
    <string name="flat_2_label">Comisión única (G. Adm. + FSC):</string>
    <string name="discount_label">Forma de descuento:</string>
    <string name="borrow_text_label">Capacidad de endeudamiento </string>
    <string name="offers_title">Ofertas</string>
    <string name="date_label_header">Plazo</string>
    <string name="quota_label_header">Cuota</string>
    <string name="tcea_label_header">TCEA</string>
    <string name="quota_not_adjust_label">Cuotas sin ajuste</string>
    <string name="rate_grace_label">Intereses de Gracia</string>
    <string name="rate_process_label">Intereses en proceso</string>
    <string name="month_grace_label">Meses de Gracia</string>
    <string name="process_days_label">Dias en proceso</string>
    <string name="last_amount_label">Saldo crédito anterior</string>
    <string name="real_amount_label">Monto a desembolsar</string>
    <string name="disbursement_text">Forma de desembolso</string>
    <string name="checkout_option">Caja/Boveda</string>
    <string name="check_option">Cheque de Gerencia</string>
    <string name="deposit_option">Deposito en Cuenta</string>
    <string name="generate_button">Otorgar crédito</string>
    <string name="print_button">Imprimir</string>
    <string name="send_email_button">Enviar correo</string>

    <string name="invalid_select_offer">No puede seleccionar esta oferta debido a que la cuota supera su capacidad de endeudamiento.</string>

    <string name="edit_offer">Editar</string>
    <string name="save_offer">Guardar</string>

    <string name="money_symbol">S/ </string>
    <string name="date_value">meses</string>
    <string name="percentage_symbol">%</string>
    
    <!-- Dialog -->
    <string name="confirm_text">¿Confirma esta operación?</string>
    <string name="accept_text">Aceptar</string>
    <string name="cancel_text">Cancelar</string>
    <string name="close_btn">X</string>
    <string name="credit_approved">Crédito otorgado</string>
    <string name="credit_approved_message">Recuerde cargar los documentos en Navego 360</string>
    <string name="send_email_title">Enviar correo a: </string>
    <string name="send_email_placeholder">email@example.com</string>
    <string name="send_buton">Enviar</string>
    <string name="print_text_dialog">Impresión en curso</string>
    <string name="send_email_dialog">Mensaje enviado satisfactoriamente</string>

    <!-- DOCENTE -->
    <string name="loading_user_info_error">Hubo un problema al cargar los datos del docente.</string>

    <!-- CAMPOS INCLOMPLETOS -->
    <string name="client_name_empty_warning">Los campos \'Apellido Paterno\', \'Apellido Materno\', \'Nombres\' del formulario \'Actualización de Datos\' no han sido llenados correctamente.</string>

    <string name="credit_type_empty_warning">El campo \'tipo de credito\' del formulario \'Ofertas\' no ha sido llenado correctamente.</string>
    <string name="offer_date_empty_warning">El campo \'fecha vencimiento\' del formulario \'Ofertas\' no ha sido llenado correctamente.</string>
    <string name="approved_date_empty_warning">El campo \'fecha_aprobacion\' del formulario \'Ofertas\' no ha sido llenado correctamente.</string>
    <string name="tea_empty_warning">El campo \'tea\' del formulario \'Ofertas\' no ha sido llenado correctamente.</string>
    <string name="discount_empty_warning">El campo \'Forma de desembolso\' del formulario \'Ofertas\' no ha sido llenado correctamente.</string>
    <string name="real_amount_empty_warning">El campo \'Monto a desembolsar\' del formulario \'Ofertas\' no ha sido llenado correctamente.</string>

    <string name="offer_type_id_empty_warning">El campo \'tipo de credito\' del formulario \'OfertasDetail\' no ha sido llenado correctamente.</string>
    <string name="amount_empty_warning">El campo \'monto aprobado\' del formulario \'OfertasDetail\' no ha sido llenado correctamente.</string>
    <string name="quota_empty_warning">El campo \'valor cuota\' del formulario \'OfertasDetail\' no ha sido llenado correctamente.</string>
    <string name="credit_date_empty_warning">El campo \'plazo credito\' del formulario \'OfertasDetail\' no ha sido llenado correctamente.</string>
    <string name="tcea_empty_warning">El campo \'tcea\' del formulario \'OfertasDetail\' no ha sido llenado correctamente.</string>
    <string name="rate_empty_warning">El campo \'taza interes\' del formulario \'OfertasDetail\' no ha sido llenado correctamente.</string>
    <string name="flat_empty_warning">El campo \'gastos flat\' del formulario \'OfertasDetail\' no ha sido llenado correctamente.</string>
    <string name="disgrace_empty_warning">El campo \'desgravamen\' del formulario \'OfertasDetail\' no ha sido llenado correctamente.</string>
    <string name="borrow_capacity_empty_warning">El campo \'capacidad endeudamiento\' del formulario \'OfertasDetail\' no ha sido llenado correctamente.</string>
    <string name="quota_not_adjust_empty_warning">El campo \'cuota sin ajuste\' del formulario \'OfertasDetail\' no ha sido llenado correctamente.</string>
    <string name="rate_grace_empty_warning">El campo \'intereses de gracia\' del formulario \'OfertasDetail\' no ha sido llenado correctamente.</string>
    <string name="rate_process_empty_warning">El campo \'interes en proceso\' del formulario \'OfertasDetail\' no ha sido llenado correctamente.</string>
    <string name="month_grace_empty_warning">El campo \'meses de gracia\' del formulario \'OfertasDetail\' no ha sido llenado correctamente.</string>
    <string name="days_process_empty_warning">El campo \'dias en proceso\' del formulario \'OfertasDetail\' no ha sido llenado correctamente.</string>

</resources>
