<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="8dp"
    android:paddingTop="6dp"
    android:paddingBottom="6dp"
    android:background="@drawable/background_offers_header">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center_vertical"
        android:weightSum="8">

        <Space
            android:layout_width="32dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:id="@+id/credit_date_label_view"
            android:text="@string/date_label_header"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen18"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:id="@+id/amount_label_view"
            android:text="@string/quota_label_header"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen18"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/tcea_label_view"
            android:text="@string/tcea_label_header"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen18"/>

    </LinearLayout>

</LinearLayout>