<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="286dp"
    android:layout_height="212dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_email_title"
            android:textColor="@color/textColor1"
            android:textSize="@dimen/dimen20"
            android:textStyle="bold"
            android:layout_marginTop="39dp"
            android:layout_marginLeft="19dp"/>
        
        <EditText
            android:layout_width="230dp"
            android:layout_height="34dp"
            android:id="@+id/email_field"
            android:inputType="textEmailAddress"
            android:hint="@string/send_email_placeholder"
            android:textSize="@dimen/dimen12"
            android:textColor="@color/textColor3"
            android:layout_marginTop="35dp"
            android:layout_marginRight="16dp"
            android:layout_gravity="end" />
        
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginBottom="26dp"
        android:layout_marginRight="26dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancel_btn"
                android:text="@string/cancel_text"
                android:textColor="@color/cancelColor"
                android:textSize="@dimen/dimen15"
                android:textStyle="bold"
                android:textAllCaps="true"/>

            <Space
                android:layout_width="17dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/accept_btn"
                android:text="@string/send_buton"
                android:textColor="@drawable/button_text_color"
                android:textSize="@dimen/dimen15"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:enabled="false"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>