<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="286dp"
    android:layout_height="188dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_text"
            android:textColor="@color/textColor1"
            android:textSize="@dimen/dimen20"
            android:textStyle="bold"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginBottom="14dp"
        android:layout_marginRight="14dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancel_btn"
                android:text="@string/cancel_text"
                android:textColor="@color/cancelColor"
                android:textSize="@dimen/dimen15"
                android:textStyle="bold"
                android:textAllCaps="true"/>
            
            <Space
                android:layout_width="17dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/accept_btn"
                android:text="@string/accept_text"
                android:textColor="@color/acceptColor"
                android:textSize="@dimen/dimen15"
                android:textStyle="bold"
                android:textAllCaps="true"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>